831.	[bug]		marcin
	Kea deamons report configuration summary when the configuration is
	completed successfully.
	(Trac #3477, git af2f91d2583b37d69c86fbc4eed29489c6fb8a12)

830.	[build]		jreed
	The configure script no longer requires pkg-config.
	(Trac #3511, git 99a5a2db8c011b358873d485ac48f7c78ac6374c)

829.    [build]         wlodek
	Lettuce DNS tests removed with all related python code,
	most of them will be used in Forge project which can be found
	http://kea.isc.org/wiki/IscForge
	(Trac #3420, git e51bcbeedbc169050751c1b896726965243667be)

828.	[bug]		marcin
	Corrected the IfaceMgrTest.detectIface unit test that failed on
	Linux systems with virtual interfaces present.
	(Trac #3527, git 7aa01a6965b6e9fc39ff005803cada7f58f2e628)

827.	[build]		jiri, tomek
	Deprecated AC_PROG_LIBTOOL macro replaced by LT_INIT.
	(Trac #3525, git 6c0aacf29fae1d0501ca69ff6324df8d4fc8c7ee)

826.	[bug]		jiri, tomek
	Compilation fix for Red Hat running on armv7.
	(Trac #3526, git eac5a80472dcb78b538c2ed34cc0534f801e5145)

825.	[bug]		jiri, tomek
	Example JSON configuration files permission fix.
	(Trac #3524, git 822a39ba33870f70787a1f666aed772e06d04d79)

824.	[bug]		marcin
	Kea deamons report configuration summary when the configuration is
	applied successfully.
	(Trac #3477, git f39d208024f720f72c931016cfa50a54e80f8c61)

823.	[build]		tomek
	query_cmp tool removed from the source code.
	(Trac #3509, git f61c800059bd5e5c74e435d7dd97ae561d29151a)

822.	[build]		tomek
	'host' program was removed from examples.
	(Trac #3421, git aeea893fb1c52d20258929a62a59ae2e7bd12e3d)

821.	[bug]		marcin
	DHCP servers no longer log an error when Interface Manager fails to
	receive a packet as a result of signal being received.
	(Trac #3478, git d80c83aef8e103dd483234429d35aeb66149e0b9)

820.	[bug]		marcin
	Corrected the IfaceMgrTest.detectIfaces unit test which reported
	false positives for specific network configurations.
	(Trac #3517, git 9affa1b2210f5cc9d7a99724e5d5c8979409cefd)
