@@ -58,6 +58,7 @@ We have received the following contributions:
    2014-08: config files examples permission fix
    2014-08: compilation fix for armv7
    2014-08: configure.ac update: AC_PROG_LIBTOOL => LT_INIT
+   2014-08: PostgreSQL compilation fix on i686
 
 Kea uses log4cplus (http://sourceforge.net/projects/log4cplus/) for logging,
 Boost (http://www.boost.org/) library for almost everything, and can use Botan
