@@ -1,3 +1,8 @@
+832.	[bug]		jiri
+	Compilation fix for PostgreSQL on i686. Thanks to Jiri Popelka
+	from RedHat for providing a patch!
+	(Trac #3532, git tbd)
+
 831.	[bug]		marcin
 	Kea deamons report configuration summary when the configuration is
 	completed successfully.
@@ -19,15 +24,18 @@
 	(Trac #3527, git 7aa01a6965b6e9fc39ff005803cada7f58f2e628)
 
 827.	[build]		jiri, tomek
-	Deprecated AC_PROG_LIBTOOL macro replaced by LT_INIT.
+	Deprecated AC_PROG_LIBTOOL macro replaced by LT_INIT. Thanks to
+	Jiri Popelka from RedHat for providing a patch!
 	(Trac #3525, git 6c0aacf29fae1d0501ca69ff6324df8d4fc8c7ee)
 
 826.	[bug]		jiri, tomek
-	Compilation fix for Red Hat running on armv7.
+	Compilation fix for Red Hat running on armv7. Thanks to Jiri
+	Popelka from RedHat for providing a patch!
 	(Trac #3526, git eac5a80472dcb78b538c2ed34cc0534f801e5145)
 
 825.	[bug]		jiri, tomek
-	Example JSON configuration files permission fix.
+	Example JSON configuration files permission fix. Thanks to Jiri
+	Popelka	from RedHat for providing a patch!
 	(Trac #3524, git 822a39ba33870f70787a1f666aed772e06d04d79)
 
 824.	[bug]		marcin
